<resources>
    <string name="app_name">LangTestTwo</string>
    <string name="action_settings">Settings</string>

    <string name="choose_a_language">Choose a Language</string>
    <string name="english">English</string>
    <string name="russian">русский</string>
    <string name="spanish">Español</string>
    <string name="portuguese">Português</string>
    <string name="italian">italiano</string>
    <string name="french">français</string>
    <string name="malaysian">Malay</string>
    <string name="german">Deutsche</string>
    <string name="arabic">عربى</string>
    <string name="dutch">Nederlands</string>
    <string name="apply">APPLY</string>
    <string name="change_language" translatable="false">Change Language</string>
    <string name="hello_world">Hello World!</string>
</resources>
