<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/iv_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_language_black_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"/>


        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/choose_a_language"
            android:textColor="@android:color/white"
            android:textAllCaps="true"/>



    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/btn_apply"
        android:layout_below="@id/titleLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <CheckBox
                    android:id="@+id/checkbox_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/tvEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/checkbox_english"
                    android:layout_marginLeft="5dp"
                    android:layout_centerInParent="true"
                    android:text="@string/english"
                    android:textAllCaps="true"/>



            </RelativeLayout>







            <RelativeLayout
                android:id="@+id/layout2"
                android:layout_below="@id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <CheckBox
                    android:id="@+id/checkbox_spanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tvSpanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/checkbox_spanish"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/spanish"
                    android:textAllCaps="true" />



            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout3"
                android:layout_below="@id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <CheckBox
                    android:id="@+id/checkbox_portuguese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tvPortuguese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/checkbox_portuguese"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/portuguese"
                    android:textAllCaps="true" />



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout4"
                android:layout_below="@id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <CheckBox
                    android:id="@+id/checkbox_russia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tvRussian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/checkbox_russia"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/russian"
                    android:textAllCaps="true" />



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout5"
                android:layout_below="@id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <CheckBox
                    android:id="@+id/checkbox_italian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tvItalian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/checkbox_italian"
                    android:layout_centerVertical="true"
                    android:text="@string/italian"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true" />



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout6"
                android:layout_below="@id/layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <CheckBox
                    android:id="@+id/checkbox_french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tvFrench"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/checkbox_french"
                    android:layout_centerVertical="true"
                    android:text="@string/french"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true" />



            </RelativeLayout>





            <RelativeLayout
                android:id="@+id/layout7"
                android:layout_below="@id/layout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <CheckBox
                    android:id="@+id/checkbox_german"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tvGerman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/checkbox_german"
                    android:layout_centerVertical="true"
                    android:text="@string/german"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true" />



            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout8"
                android:layout_below="@id/layout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <CheckBox
                    android:id="@+id/checkbox_dutch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tvDutch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/checkbox_dutch"
                    android:layout_centerVertical="true"
                    android:text="@string/dutch"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true" />



            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout9"
                android:layout_below="@id/layout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <CheckBox
                    android:id="@+id/checkbox_malaysian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tvMalay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/checkbox_malaysian"
                    android:layout_centerVertical="true"
                    android:text="@string/malaysian"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true" />



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout10"
                android:layout_below="@id/layout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <CheckBox
                    android:id="@+id/checkbox_arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tvArabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/checkbox_arabic"
                    android:layout_centerVertical="true"
                    android:text="@string/arabic"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true" />



            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>


    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:text="@string/apply"/>


</RelativeLayout>
